--- a/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/SkyBallHetiRedMatchSubDsbd.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/SkyUI/MMBBMatch/SkyBallHetiRedMatchSubDsbd.storyboard
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e5f-fG-nJx">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e5f-fG-nJx">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Match Sub Dsbd View Controller-->
+        <!--Sky Ball Heti RedHT Match Sub Dsbd View Controller-->
         <scene sceneID="Myf-2d-6eY">
             <objects>
                 <viewController id="e5f-fG-nJx" customClass="SkyBallHetiRedHTMatchSubDsbdViewController" sceneMemberID="viewController">
@@ -19,16 +17,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Mc-zd-9iO">
-                                <rect key="frame" x="0.0" y="20" width="140" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="90" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="euB-Ma-sjE"/>
+                                    <constraint firstAttribute="width" constant="90" id="euB-Ma-sjE"/>
                                 </constraints>
                             </tableView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-H9-Hhy">
-                                <rect key="frame" x="141" y="20" width="234" height="647"/>
+                                <rect key="frame" x="91" y="0.0" width="284" height="667"/>
                             </scrollView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="kjK-BX-Wlp"/>
                         <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="kjK-BX-Wlp" firstAttribute="bottom" secondItem="PeF-H9-Hhy" secondAttribute="bottom" id="5n5-T6-nrF"/>
@@ -39,7 +38,6 @@
                             <constraint firstItem="PeF-H9-Hhy" firstAttribute="top" secondItem="kjK-BX-Wlp" secondAttribute="top" id="sAR-S8-RJ7"/>
                             <constraint firstItem="PeF-H9-Hhy" firstAttribute="trailing" secondItem="kjK-BX-Wlp" secondAttribute="trailing" id="va1-Cg-0sd"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="kjK-BX-Wlp"/>
                     </view>
                     <connections>
                         <outlet property="leftTableView" destination="6Mc-zd-9iO" id="aHX-ns-fjh"/>
