--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
@@ -5,13 +5,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="GlodBuleHTChatContentCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="GlodBuleHTChatSelfContentCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
-                        <rect key="frame" x="44" y="32" width="8" height="28"/>
+                        <rect key="frame" x="268" y="32" width="8" height="28"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="8" id="YBZ-fT-8LX"/>
@@ -46,7 +45,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="spN-hg-q5E" customClass="JXImageView">
-                        <rect key="frame" x="2" y="2" width="30" height="30"/>
+                        <rect key="frame" x="288" y="2" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="JVw-Mt-M1Y"/>
                             <constraint firstAttribute="width" constant="30" id="guf-7j-TxI"/>
@@ -59,38 +58,33 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rva-BI-H7I" userLabel="userNameLabel" customClass="JXLabel">
-                        <rect key="frame" x="38" y="2" width="40" height="26"/>
+                        <rect key="frame" x="242" y="2" width="40" height="26"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="40" id="Esa-4V-scH"/>
                             <constraint firstAttribute="height" constant="26" id="b1K-zQ-OmF"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" systemColor="systemBlueColor"/>
+                        <color key="textColor" red="1" green="0.41866918103886386" blue="0.25039816261491032" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="top" secondItem="rva-BI-H7I" secondAttribute="bottom" constant="4" id="Hap-WQ-IRU"/>
-                    <constraint firstItem="spN-hg-q5E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="2" id="JPd-WE-mu1"/>
+                    <constraint firstItem="spN-hg-q5E" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-2" id="JPd-WE-mu1"/>
                     <constraint firstAttribute="bottom" secondItem="Whj-Qb-IYW" secondAttribute="bottom" constant="4" id="Usi-sz-KzO"/>
-                    <constraint firstItem="rva-BI-H7I" firstAttribute="leading" secondItem="spN-hg-q5E" secondAttribute="trailing" constant="6" id="ZRV-pa-mh8"/>
-                    <constraint firstItem="Whj-Qb-IYW" firstAttribute="leading" secondItem="rva-BI-H7I" secondAttribute="leading" constant="6" id="gCL-cv-rnC"/>
+                    <constraint firstItem="rva-BI-H7I" firstAttribute="trailing" secondItem="spN-hg-q5E" secondAttribute="leading" constant="-6" id="ZRV-pa-mh8"/>
+                    <constraint firstItem="Whj-Qb-IYW" firstAttribute="trailing" secondItem="rva-BI-H7I" secondAttribute="trailing" constant="-6" id="gCL-cv-rnC"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="jsy-Mi-oRF"/>
                     <constraint firstItem="rva-BI-H7I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="osf-db-6rF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="chatContentLabel" destination="Whj-Qb-IYW" id="7MM-Bx-JZB"/>
-                <outlet property="userImage" destination="spN-hg-q5E" id="FsD-3a-SQ4"/>
-                <outlet property="userNameLabel" destination="rva-BI-H7I" id="m5b-iH-Phu"/>
+                <outlet property="chatContentLabel" destination="Whj-Qb-IYW" id="R4g-iu-xNe"/>
+                <outlet property="userImage" destination="spN-hg-q5E" id="qbL-vu-TJY"/>
+                <outlet property="userNameLabel" destination="rva-BI-H7I" id="KBZ-WM-5Qo"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="111.83035714285714"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
